--- a/src/components/EmptyCartView/index.css
+++ b/src/components/EmptyCartView/index.css
@@ -8,7 +8,8 @@
 .cart-empty-img {
   width: 180px;
   height: 190px;
-}cart-empty-view-container {
+}
+cart-empty-view-container {
   display: flex;
   flex-direction: column;
   align-items: center;
